sass/ncolors.scss
@charset "utf-8";
@import "base";

%maxed {
  display: block;
  position: absolute;
  top: 0; bottom: 0; right: 0; left: 0;
  content: "";
}
%toolbar-shadowed {
  @include box-shadow(inset 0 2px 5px rgba(0,0,0,0.5));
}

html,body { width:100%; height:100%; margin:0px; }
#loading {
  position: relative;
  text-align:center;
  font-size: 30px;
}
#drawing, .gallery {
  @extend %maxed;
  @extend %toolbar-shadowed;
  width: 100%; height: 100%;
  background: white;
}
#framerate {
  position: absolute;
  top: 0;
  right: 0;
  height: 20px;
  font-size: 20px;
  margin: 0; padding: 0 5px;
  display: none;
}
body.dev #framerate {
  display: block;
}
.gallery {
  overflow-y: scroll;
  & > a {
    @include inline-block;
    /* This width/height should match THUMB_WIDTH/THUMB_HEIGHT in drawing.js */
    width: 160px; height: 120px;
    border: 2px solid #ccc;
    margin: 10px;
    vertical-align: middle;
    @include box-shadow(3px 3px 10px rgba(0,0,0,0.5));
    position: relative; /* position reference for nested canvas */
    & > canvas {
      @extend %maxed;
      background: white; /* hide UUID text */
      // a bit of a 3d button effect
      @include box-shadow(inset  5px  5px 20px rgba(255,255,255,0.65),
                          inset -5px -5px 20px rgba(  0,  0,  0,0.10));
    }
    &.new:after {
      @extend %maxed;
      background-image: image-url('list-add.svg');
      @include background-size(50%);
      background-position: center center;
      background-repeat: no-repeat;
      background-color: #404040; /* "toolbar grey" */
    }
  }
}
#brushdialog {
  @import "brushdialog";
}
#mask {
  @extend %maxed;
  background: rgba(0,0,0,0.5);
}
/* animation properties for #mask (fade in/out) */
#mask {
  visibility: hidden;
  opacity: 0;
  @include transition(visibility 0s linear 0.5s, opacity 0.5s);
}
body.mask > #mask {
  visibility: visible;
  opacity: 1;
  @include transition-delay(0s);
}

